Process panel
Former-commit-id: 167b08cb3ece4566d406ba3e2ce52b6f611f3fcc